[package]
name = "bevy-kira-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
    #"bevy_audio",
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    # "png",
    # "hdr",
    #"mp3",
    #"wav",
    "x11",
    "bevy_dylib", # Faster compile times
]}
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "bevy_main", features = [ "wav" ] }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
pretty-type-name = "1.0.0"


# Setup to use bevy_main instead of rev
[patch.'https://github.com/NiklasEi/bevy_kira_audio']
bevy_kira_audio = { git = "https://github.com/slyedoc/bevy_kira_audio", branch = "bevy_main", features = [ "wav" ] }

# Setup to use bevy_main instead of rev
[patch.'https://github.com/NiklasEi/bevy_asset_loader']
bevy_asset_loader = { git = "https://github.com/slyedoc/bevy_asset_loader", branch = "bevy_main", features = [ "wav" ] }